fix: properly adjust feature card banner carousel spacing

--- a/src/shared/components/FeatureCard/FeaturedCard.scss
+++ b/src/shared/components/FeatureCard/FeaturedCard.scss
@@ -3,9 +3,8 @@
 }
 
 .banner-carousel {
-  height: fit-content;
-  margin-bottom: 1rem;
-  width: 100%;
+  width: auto;
+  margin-top: -1rem;
 
   &.banner-carousel > * {
     width: 100%;
@@ -13,7 +12,63 @@
   }
 
   &::part(item) {
-    padding: 0 !important;
+    padding-block: 1rem !important;
+  }
+}
+
+@container (min-width: 1440px) {
+  .banner-carousel {
+    margin-inline: calc(
+      (-1 * var(--_ui5-v2-18-0_dynamic_page_content_padding_inline_XL)) + 1px
+    );
+
+    &::part(item) {
+      padding-inline: var(
+        --_ui5-v2-18-0_dynamic_page_content_padding_inline_XL
+      ) !important;
+    }
+  }
+}
+
+@container (min-width: 1024px) and (max-width: 1439px) {
+  .banner-carousel {
+    margin-inline: calc(
+      (-1 * var(--_ui5-v2-18-0_dynamic_page_content_padding_inline_L)) + 1px
+    );
+
+    &::part(item) {
+      padding-inline: var(
+        --_ui5-v2-18-0_dynamic_page_content_padding_inline_L
+      ) !important;
+    }
+  }
+}
+
+@container (min-width: 600px) and (max-width: 1023px) {
+  .banner-carousel {
+    margin-inline: calc(
+      (-1 * var(--_ui5-v2-18-0_dynamic_page_content_padding_inline_M)) + 1px
+    );
+
+    &::part(item) {
+      padding-inline: var(
+        --_ui5-v2-18-0_dynamic_page_content_padding_inline_M
+      ) !important;
+    }
+  }
+}
+
+@container (max-width: 599px) {
+  .banner-carousel {
+    margin-inline: calc(
+      (-1 * var(--_ui5-v2-18-0_dynamic_page_content_padding_inline_S)) + 1px
+    );
+
+    &::part(item) {
+      padding-inline: var(
+        --_ui5-v2-18-0_dynamic_page_content_padding_inline_S
+      ) !important;
+    }
   }
 }
 
